# hl-server

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-docker-image.sh  run-docker.sh
autoload/: hl.vim
example/: simple_hl_client
include/: clang_tokenize.hpp  logs.hpp  misc.hpp  rr_schemes.h  token.hpp
include/hl/: HandlerFactory.hpp  RRData.hpp  RequestHandler.hpp  RequestObject.hpp  ResponseObject.hpp  Token.hpp  TokenizeHandler.hpp  TokenizeHandlerFactory.hpp
include/ss/: AbstractHandlerFactory.hpp  AbstractRequestHandler.hpp  Context.hpp  Server.hpp  Session.hpp  SessionPool.hpp  errors.hpp
plugin/: hl.vim
src/: clang_tokenize.cpp  main.cpp
src/go_tokenizer/: go.mod  main.go
src/hl/: HandlerFactory.cpp  RRJsonErrorHandler.hpp  RequestHandler.cpp  RequestObject.cpp  ResponseObject.cpp  TokenizeHandler.cpp  TokenizeHandlerFactory.cpp
src/hl/tokenizer/: AbstractTokenizer.hpp  CppTokenizer.cpp  CppTokenizer.hpp  PolyndromTokenizer.cpp  PolyndromTokenizer.hpp  TokenizerFactory.cpp  TokenizerFactory.hpp
src/ss/: Context.cpp  Server.cpp  Session.cpp  SessionPool.cpp  errors.cpp
test/: batch.vim  simple_hl_client  simple_test.lua
vim/: hl.vim
